Language Provider Done

--- a/lib/translations/app_ar.arb
+++ b/lib/translations/app_ar.arb
@@ -6,7 +6,7 @@
  "sebha":"سبحة",
  "settings":"إعدادات",
  "theme":"مظهر",
- "dark":"داكن",
+ "dark":"مظلم",
  "light":"مضئ",
  "language":"اللغة",
  "chaptername":"إسم السورة",
