Radio Screen Done

--- a/lib/translations/app_ar.arb
+++ b/lib/translations/app_ar.arb
@@ -12,5 +12,6 @@
  "chaptername":"إسم السورة",
  "chapternumber":"عدد الأيات",
  "hadethname":"الأحاديث",
- "tasbehnumber":"عدد التسبيحات"
+ "tasbehnumber":"عدد التسبيحات",
+ "quranradio":"إذاعة القرآن الكريم"
 }
