--- a/lib/translations/app_en.arb
+++ b/lib/translations/app_en.arb
@@ -12,5 +12,6 @@
  "chaptername":"Chapter Title",
  "chapternumber":"Chapter Number",
  "hadethname":"Ahadeth",
- "tasbehnumber":"Tasbeh Number"
+ "tasbehnumber":"Tasbeh Number",
+ "quranradio":"Quran Radio"
 }
