Shared Preferences Handled

--- a/lib/translations/app_ar.arb
+++ b/lib/translations/app_ar.arb
@@ -5,8 +5,8 @@
  "radio":"راديو",
  "sebha":"سبحة",
  "settings":"إعدادات",
- "theme":"مظهر",
- "dark":"مظلم",
+ "theme":"سمة",
+ "dark":"داكن",
  "light":"مضئ",
  "language":"اللغة",
  "chaptername":"إسم السورة",
